<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/train_popup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#B8B8B8">

    <TextView
        android:id="@+id/train_popup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/train_popup_northbound_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/train_popup_northbound_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/nextnorthbound"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            />
        <TextView
            android:id="@+id/train_popup_northbound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/train_popup_southbound_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:visibility="gone">

        <TextView
            android:id="@+id/train_popup_southbound_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/nextsouthbound"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/train_popup_southbound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/train_popup_eastbound_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:visibility="gone">

        <TextView
            android:id="@+id/train_popup_eastbound_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/nexteastbound"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/train_popup_eastbound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/train_popup_westbound_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/train_popup_westbound_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/nextwestbound"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/train_popup_westbound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/train_popup_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullschedule" 
        />

    <Button
        android:id="@+id/train_popup_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        />
    
</LinearLayout>